# crane_x7_ros_test

./: CMakeLists.txt  README.md  package.xml
crane_x7_gazebo/launch/: crane_x7_with_table_flypan.launch
crane_x7_gazebo/worlds/: flypan.world
launch/: crane_x7_with_table_flypan.launch
model/: README.md
model/flypan/: flypan_zx 50x40.stl
scripts/: README.md  color.py  color_and_depth.py  depth.py  main_move.py  middle_node.py  pick_and_place_in_gazebo_example.py  pose_groupstate_example.py  ready.py  search.py
worlds/: flypan.world
